[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scenes/BuildingPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Assets/towerbutton_pressed-export.png" type="Texture" id=3]
[ext_resource path="res://Assets/towerButton_hover-export.png" type="Texture" id=4]
[ext_resource path="res://Assets/towerButton-export.png" type="Texture" id=5]
[ext_resource path="res://Assets/Stove1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sink1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Gas_cylinder.png" type="Texture" id=8]
[ext_resource path="res://Assets/Cabinet-Animation-with-Cleaning-Products-png (4).png" type="Texture" id=9]
[ext_resource path="res://Assets/PlaymegamesReguler-2OOee.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/Refrigerator1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Cabinet-Animation-with-Cleaning-Products-png (1).png" type="Texture" id=12]
[ext_resource path="res://Assets/Cabinet-Animation-Dishes-png (4).png" type="Texture" id=13]
[ext_resource path="res://Assets/Cutlery.png" type="Texture" id=14]
[ext_resource path="res://Assets/Plant.png" type="Texture" id=15]
[ext_resource path="res://Assets/Island1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Meat-preparation.png" type="Texture" id=17]
[ext_resource path="res://Assets/Plates.png" type="Texture" id=18]
[ext_resource path="res://Assets/Nonstick-pan.png" type="Texture" id=19]
[ext_resource path="res://Assets/Covered-nonstick-pan.png" type="Texture" id=20]
[ext_resource path="res://Assets/Nonstick-skillet.png" type="Texture" id=21]
[ext_resource path="res://Assets/Covered-Clay-pot-lid.png" type="Texture" id=22]
[ext_resource path="res://Assets/Cleaning-productst.png" type="Texture" id=23]
[ext_resource path="res://Assets/Pickles-honey-and-knife.png" type="Texture" id=24]
[ext_resource path="res://Assets/Covered-nonstick-skillet.png" type="Texture" id=25]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 48, 0, 0, 0, 0, 16, 48, 0, 0, 0, 0, 16, 88, 0, 0, 0, 0, 80, 88, 0, 0, 0, 0, 80, 104, 0, 0, 0, 0, 136, 104, 0, 0, 0, 0, 136, 64, 0, 0, 0, 0, 168, 64, 0, 0, 0, 0, 168, 152 )
}

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 10 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 152.0
color = Color( 0.490196, 0.219608, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 168, 152 )
offset = 499.47

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Timer" type="Timer" parent="GUI"]
autostart = true

[node name="TimeLabel" type="Label" parent="GUI/Timer"]
margin_left = 208.0
margin_top = 40.0
margin_right = 248.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "00:59"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel" type="Label" parent="GUI"]
anchor_left = -0.00219232
anchor_top = 0.00374156
anchor_right = -0.00219226
anchor_bottom = 0.00374156
margin_left = 208.561
margin_top = 7.43877
margin_right = 594.561
margin_bottom = 92.4388
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 3 )
text = "Mana: 25"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel2" type="Label" parent="GUI"]
anchor_left = -0.00219232
anchor_top = 0.00374156
anchor_right = -0.00219226
anchor_bottom = 0.00374156
margin_left = 208.561
margin_top = 23.4388
margin_right = 672.561
margin_bottom = 108.439
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 3 )
text = "Supplies: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="GUI"]
margin_left = 232.0
margin_top = 120.0
margin_right = 251.0
margin_bottom = 142.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingPlatform" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 128 )

[node name="BuildingPlatform2" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 128 )

[node name="BuildingPlatform3" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 64 )

[node name="BuildingPlatform4" parent="." instance=ExtResource( 1 )]
position = Vector2( 216, 64 )

[node name="Plant" type="Sprite" parent="BuildingPlatform4"]
position = Vector2( -24, 0 )
texture = ExtResource( 15 )

[node name="Refrigerator1" type="Sprite" parent="."]
position = Vector2( 40, 120 )
texture = ExtResource( 11 )

[node name="Sink1" type="Sprite" parent="."]
position = Vector2( 72, 128 )
texture = ExtResource( 7 )

[node name="Stove1" type="Sprite" parent="."]
position = Vector2( 152, 128 )
texture = ExtResource( 6 )

[node name="Stove2" type="Sprite" parent="."]
position = Vector2( 184, 128 )
texture = ExtResource( 6 )

[node name="Refrigerator2" type="Sprite" parent="."]
position = Vector2( 56, 120 )
texture = ExtResource( 11 )

[node name="Gas_cylinder" type="Sprite" parent="."]
position = Vector2( 120, 128 )
texture = ExtResource( 8 )

[node name="Gas_cylinder2" type="Sprite" parent="."]
position = Vector2( 136, 128 )
texture = ExtResource( 8 )

[node name="Cabinet-Animation-with-Cleaning-Products-png (4)" type="Sprite" parent="."]
position = Vector2( 16, 24 )
texture = ExtResource( 9 )

[node name="Cabinet-Animation-with-Cleaning-Products-png (1)" type="Sprite" parent="."]
position = Vector2( 40, 24 )
texture = ExtResource( 12 )

[node name="Sink2" type="Sprite" parent="."]
position = Vector2( 56, 24 )
texture = ExtResource( 7 )

[node name="Stove4" type="Sprite" parent="."]
position = Vector2( 184, 96 )
texture = ExtResource( 6 )

[node name="Stove3" type="Sprite" parent="."]
position = Vector2( 152, 96 )
texture = ExtResource( 6 )

[node name="Cutlery" type="Sprite" parent="."]
position = Vector2( 40, 24 )
texture = ExtResource( 14 )

[node name="Cabinet-Animation-Dishes-png (4)" type="Sprite" parent="."]
position = Vector2( 96, 24 )
texture = ExtResource( 13 )

[node name="Cabinet-Animation-with-Cleaning-Products-png (1)2" type="Sprite" parent="."]
position = Vector2( 72, 24 )
texture = ExtResource( 12 )

[node name="Plant" type="Sprite" parent="."]
position = Vector2( 72, 64 )
texture = ExtResource( 15 )

[node name="Island2" type="Sprite" parent="."]
position = Vector2( 144, 32 )
texture = ExtResource( 16 )

[node name="Island1" type="Sprite" parent="."]
position = Vector2( 128, 32 )
texture = ExtResource( 16 )

[node name="Plant2" type="Sprite" parent="."]
position = Vector2( 120, 64 )
texture = ExtResource( 15 )

[node name="Island3" type="Sprite" parent="."]
position = Vector2( 160, 32 )
texture = ExtResource( 16 )

[node name="Island4" type="Sprite" parent="."]
position = Vector2( 176, 32 )
texture = ExtResource( 16 )

[node name="Plant3" type="Sprite" parent="."]
position = Vector2( 240, 64 )
texture = ExtResource( 15 )

[node name="Meat-preparation" type="Sprite" parent="."]
position = Vector2( 128, 32 )
texture = ExtResource( 17 )

[node name="Nonstick-pan" type="Sprite" parent="."]
position = Vector2( 96, 24 )
texture = ExtResource( 19 )

[node name="Plates" type="Sprite" parent="."]
position = Vector2( 72, 24 )
texture = ExtResource( 18 )

[node name="Covered-nonstick-pan2" type="Sprite" parent="."]
position = Vector2( 152, 96 )
texture = ExtResource( 20 )

[node name="Covered-nonstick-pan" type="Sprite" parent="."]
position = Vector2( 144, 32 )
texture = ExtResource( 20 )

[node name="Pickles-honey-and-knife" type="Sprite" parent="."]
position = Vector2( 160, 32 )
texture = ExtResource( 24 )

[node name="Cleaning-productst" type="Sprite" parent="."]
position = Vector2( 16, 24 )
texture = ExtResource( 23 )

[node name="Nonstick-skillet" type="Sprite" parent="."]
position = Vector2( 184, 96 )
texture = ExtResource( 21 )

[node name="Covered-nonstick-skillet" type="Sprite" parent="."]
position = Vector2( 176, 32 )
texture = ExtResource( 25 )

[node name="Covered-nonstick-skillet2" type="Sprite" parent="."]
position = Vector2( 184, 128 )
texture = ExtResource( 25 )

[node name="Covered-Clay-pot-lid" type="Sprite" parent="."]
position = Vector2( 152, 128 )
texture = ExtResource( 22 )
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="GUI/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="GUI/TextureButton" to="." method="_on_TextureButton_pressed"]
